kustomize/base/testing.yaml
kind: List
metadata: {}
apiVersion: v1
items:
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      app: myweb
    name: myweb
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: myweb:latest
    source:
      git:
        uri: https://github.com/kelvinlnx/myweb
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: ubi:latest
      type: Docker
    triggers:
    - github:
        secret: xZdTXZgIBoml4PHKUi3A
      type: GitHub
    - generic:
        secret: 7jwsDPpjlq3ojHgb5-nL
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: myweb
      app.kubernetes.io/component: myweb
      app.kubernetes.io/instance: myweb
    name: myweb
  spec:
    replicas: 1
    selector:
      deploymentconfig: myweb
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deploymentconfig: myweb
      spec:
        containers:
        - image: myweb:latest
          name: myweb
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - myweb
        from:
          kind: ImageStreamTag
          name: myweb:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: myweb
      app.kubernetes.io/component: myweb
      app.kubernetes.io/instance: myweb
    name: myweb
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: myweb
  status:
    loadBalancer: {}
